--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <!-- QR box  container -->
         <div id="qr-box">
-            <img src="images/image-qr-code.png">
+            <img src="images/image-qr-code.png" alt="qrcode">
             <h1>Improve your front-end skills by building projects</h1>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.</p>
         </div>
