--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <!-- QR box  container -->
+        <!-- QR box container -->
         <div id="qr-box">
-            <img src="images/image-qr-code.png" alt="qrcode">
+            <img src="images/image-qr-code.png" alt="qr code">
             <h1>Improve your front-end skills by building projects</h1>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.</p>
         </div>
-        <!-- pagefoot -->
+        <!-- footer -->
         <div id="rodape">
             <p>Challenge by <a href="https://www.frontendmentor.io/home">Frontend Mentor</a>. Code by <a href="https://github.com/carolrangel98">Carol Rangel</a>.</p>
         </div>
